# irc

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
crates/irc_client/: Cargo.toml
crates/irc_server/: Cargo.toml  clippy.txt  config.toml  todo.txt
crates/irc_server/src/: channel_ops.rs  channels.rs  channels_models.rs  commands.rs  config.rs  constants.rs  errors.rs  lib.rs  message.rs  message_models.rs  miscellanneous.rs  parsers.rs  pre_registration.rs  registration.rs  replies.rs  server_state.rs  state.rs  types.rs  user_state.rs  users.rs
crates/irc_server/src/handlers/: channels.rs  client.rs  messages.rs  miscellanneous.rs  mod.rs  registration.rs  request.rs
crates/irc_server/src/ops/: channel.rs  message.rs  miscellanneous.rs  mod.rs  parsers.rs  pre_registration.rs  registration.rs
python/: irc_server.py
