[workspace]
resolver = "3"
members = ["crates/*"]

# Shared package metadata inherited by workspace members
[workspace.package]
version = "1.0.0"
authors = ["Manu <manu.leunam@gmail.com>"]
edition = "2024"

[workspace.dependencies]
nom = "8.0.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
