[workspace]
resolver = "3"
members = ["crates/*"]

# Shared package metadata inherited by workspace members
[workspace.package]
version = "1.0.0"
authors = ["Manu <manu.leunam@gmail.com>"]
edition = "2024"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
dashmap = "5"
flexi_logger = "0.31.7"
log = "0.4.28"
nom = "8.0.0"
serde = {version = "1.0.228", features= ["derive"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
