[package]
name = "irc_server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "irc_server"

[dependencies]
anyhow = "1.0.100"
dashmap = "5"
flexi_logger = "0.31.7"
log = "0.4.28"
nom = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
