[package]
name = "irc_server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "irc_server"
path = "src/bin/irc_server.rs"

[[bin]]
name = "irc_client_tests"
path = "src/bin/irc_client_tests.rs"

[dependencies]
anyhow = "1.0.100"
dashmap = "5"
flexi_logger = "0.31.7"
log = "0.4.28"
nom = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
