[package]
name = "irc_server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "irc_server"
path = "src/bin/irc_server.rs"

[[bin]]
name = "irc_client_tests"
path = "src/bin/irc_client_tests.rs"

[dependencies]
clap = { workspace = true }
dashmap = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
nom = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
